# SNAKE_GAME

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_simple.bat  snake_game.cpp
include/: Food.h  GameConfig.h  GameManager.h  InputHandler.h  Renderer.h  Snake.h
src/: Food.cpp  GameManager.cpp  InputHandler.cpp  Renderer.cpp  Snake.cpp  main.cpp
